--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
             <div class="box">
                 <img class="image" src="images/g-1.png" alt="">
                 <div class="content">
-                    <img src="images/s-1.png" alt="">
+                    <img class="empty" src="images/empty.png" alt="">
                     <h3>Bulbs</h3>
                     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Assumenda inventore neque amet ipsa
                         tenetur voluptates aperiam tempore libero labore aut.</p>
@@ -77,7 +77,7 @@
             <div class="box">
                 <img class="image" src="images/g-2.png" alt="">
                 <div class="content">
-                    <img src="images/s-2.png" alt="">
+                    <img class="empty" src="images/empty.png" alt="">
                     <h3>Tubelights</h3>
                     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Assumenda inventore neque amet ipsa
                         tenetur voluptates aperiam tempore libero labore aut.</p>
@@ -86,7 +86,7 @@
             <div class="box">
                 <img class="image" src="images/g-3.png" alt="">
                 <div class="content">
-                    <img src="images/s-3.png" alt="">
+                    <img class="empty" src="images/empty.png" alt="">
                     <h3>Ceiling Lights</h3>
                     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Assumenda inventore neque amet ipsa
                         tenetur voluptates aperiam tempore libero labore aut.</p>
@@ -95,7 +95,7 @@
             <div class="box">
                 <img class="image" src="images/g-4.png" alt="">
                 <div class="content">
-                    <img src="images/s-4.png" alt="">
+                    <img class="empty" src="images/empty.png" alt="">
                     <h3>LED Bulbs</h3>
                     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Assumenda inventore neque amet ipsa
                         tenetur voluptates aperiam tempore libero labore aut.</p>
